# ddlc-psp

./: CMakeLists.txt  README.md
src/: color.h  game.c  game.h  main.c
src/scene/: splash.c  splash.h
src/scenes/: splash.c
